--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ PyYAML==6.0.1
 regex==2024.7.24
 requests==2.32.3
 scikit-learn==1.2.1
-scipy==1.14.0
+scipy>=1.10,<1.14
 six==1.16.0
 soupsieve==2.5
 threadpoolctl==3.5.0
